--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
 
+_dump/
+
 ######################################################################
 # IDE
 
