--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,12 @@
                 <version>${nop-entropy.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>io.github.entropy-cloud</groupId>
+                <artifactId>nop-web-amis-editor</artifactId>
+                <version>${nop-entropy.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
