--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>nop-sys-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.entropy-cloud</groupId>
+            <artifactId>nop-web-amis-editor</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
